--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Food Recipe App | AsmrProg</title>
+    <title> 🐔 बनाये App 🍗</title>
 </head>
 
 <body>
 
     <header>
-        <h1>Food Recipe App</h1>
+        <h1>🐔 बनाये App 🍗</h1>
         <div class="search">
             <input type="text" id="searchInput" placeholder="Enter an ingredient...">
             <button id="searchButton">Search</button>
